--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes fadeInUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+.fadeInUp-animation {
+  animation: 1.5s fadeInUp;
+}
+
 .navbar-container {
-  border-bottom: 1px solid rgb(237, 237, 237);
+  border-bottom: 1px so lid rgb(237, 237, 237);
 }
