--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,3 +16,18 @@
 .fadeInUp-animation {
   animation: 1s fadeInUp;
 }
+
+@keyframes fadeInSide {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+.fadeInSide {
+  animation: 0.75s fadeInSide;
+}
